Fix container layout on small devices

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -54,11 +54,12 @@ body {
 .container {
   position: relative;
 
-  padding-top: 4.5em;
   margin-left: auto;
   margin-right: auto;
+  width: auto;
   max-width: 42em;
-
+  
+  padding-top: 4.5em;
   padding-left: 1.2em;
   padding-right: 1.2em;
 
